<resources>
    <string name="app_name">AtividadeN2</string>
    <string name="configuracoes">Configurações</string>
    <string name="tipo_mapa">Tipo de Mapa</string>
    <string name="vetorial_default">Vetorial (default)</string>
    <string name="satelite">Satélite</string>
    <string name="navegacao">Navegação</string>
    <string name="north_up_default">North Up (default)</string>
    <string name="course_up">Course Up</string>
    <string name="salvar">Salvar</string>
    <string name="gerenciador_de_trilhas">Gerenciador de Trilhas</string>
    <string name="registrar_trilha">Registrar Trilha</string>
    <string name="consultar_trilhas">Consultar Trilhas</string>
    <string name="visualizar">Visualizar</string>
    <string name="apagar">Apagar</string>
    <string name="editar">Editar</string>
    <string name="apagar_todas">Apagar todas</string>
    <string name="informacoes">Informações</string>
    <string name="vel_0_km_h">Vel.: 0 km/h</string>
    <string name="max_0_km_h">Máx.: 0 km/h</string>
    <string name="cronometro_padrao">00:00:00</string>
    <string name="distancia_0_m">Distância: 0 m</string>
    <string name="iniciar">INICIAR</string>
    <string name="parar">PARAR</string>
    <string name="erro_carregar_mapa">Erro ao carregar o mapa</string>
    <string name="erro_formato">Erro: %s</string>
    <string name="permissao_concedida">Permissão concedida</string>
    <string name="permissao_necessaria">Permissão de localização necessária</string>
    <string name="gravacao_iniciada">Gravação iniciada</string>
    <string name="trilha_salva">Trilha salva!</string>
    <string name="trilha_nao_encontrada">Trilha não encontrada</string>
    <string name="nenhum_ponto_registrado">Nenhum ponto registrado</string>
    <string name="voce">Você</string>
    <string name="velocidade">Vel.: %.1f km/h</string>
    <string name="velocidade_maxima">Máx.: %.1f km/h</string>
    <string name="distancia">Distância: %.0f m</string>
    <string name="inicio">Início: %s</string>
    <string name="velocidade_media">Vel. média: %.1f km/h</string>
    <string name="velocidade_maxima_format">Vel. máxima: %.1f km/h</string>
    <string name="distancia_format">Distância: %.0f m</string>
    <string name="duracao_format">Duração: %s</string>
</resources>